Table "users" {
  "id" integer [pk, not null]
  "username" text [not null]
}

Table "device_info" {
  "model" text [not null, default: 'sst-cam-v2']
  "name" text [not null, default: 'sst-cam']
  "timezone" text [not null, default: 'UTC']
  "version" text [not null, default: '1.0.0']
}

Table "config_client" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "enabled" boolean [not null, default: false]
  "medium" integer [not null, default: 0, note: 'wifi=0 | ethernet=1']
  "ssid" text
  "wifi_password" text
  "static_ip" boolean [not null, default: false]
  "ip_address" text
  "subnet_mask" text
  "gateway" text

  checks {
    `medium = 1 OR ssid IS NOT NULL`
    `medium = 1 OR wifi_password IS NOT NULL`
    `static_ip = false OR ip_address IS NOT NULL`
    `static_ip = false OR subnet_mask IS NOT NULL`
    `static_ip = false OR gateway IS NOT NULL`
  }
}

Table "config_access_point" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "enabled" boolean [not null, default: false]
  "medium" integer [not null, default: 0, note: 'wifi=0 | ethernet=1']
  "ssid" text [default: 'sst-cam']
  "wifi_password" text [default: 123456]
  "static_ip" boolean [not null, default: false]
  "ip_address" text
  "subnet_mask" text
  "gateway" text

  checks {
    `medium = 1 OR ssid IS NOT NULL`
    `medium = 1 OR wifi_password IS NOT NULL`
    `static_ip = false OR ip_address IS NOT NULL`
    `static_ip = false OR subnet_mask IS NOT NULL`
    `static_ip = false OR gateway IS NOT NULL`
  }
}

Table "config_bluetooth" {
  "user_id" integer [pk, not null, ref: - "users"."id"]
  "enabled" boolean [not null, default: true]
  "name" text [not null, default: 'sst-cam']
  "password" text [not null, default: 123456]
}

Table "stream_config" {
  "user_id" integer [pk, not null, ref: > "users"."id"]
  "platform" integer [not null, note: '0=youtube | 1=twitch | 2=facebook | 3=instagram | 4=tiktok | 5=custom']
  "name" text [not null, note: 'user defined label for custom, platform name for presets']
  "enabled" boolean [not null, default: false]
  "stream_key" text [not null]
  "stream_type" integer [not null, default: 0, note: '0=rtmp | 1=rtmps']
  "url" text [not null]
  "codec" integer [not null, default: 0, note: '0=h264 | 1=h265']
  "width" integer [not null, default: 1920]
  "height" integer [not null, default: 1080]
  "framerate" integer [not null, default: 60]
  "bitrate_kbps" integer [not null, default: 4000]

  Indexes {
    (user_id, platform, name) [unique, name: "idx_stream_config_user_id_platform_name"]
  }

  checks {
    `platform >= 0 AND platform <= 5`
    `stream_type >= 0 AND stream_type <= 1`
    `codec >= 0 AND codec <= 1`
    `framerate > 0`
    `bitrate_kbps > 0`
    `width > 0`
    `height > 0`
  }
}

Table "storage_config" {
  "user_id" integer [not null, ref: > "users"."id"]
  "type" integer [not null, note: '0=logs | 1=recording | 2=snapshots | 3=thumbnails']
  "enabled" boolean [not null, default: true]
  "format" integer [not null, note: '0=txt | 1=mp4 | 2=jpg']
  "path" text [not null]

  Indexes {
    (user_id, type) [pk, name: "idx_storage_config_user_id_type"]
  }

  checks {
    `type >= 0 AND type <= 3`
    `format >= 0 AND format <= 2`
  }
}

Table "camera_calibration" {
  "id" integer [pk, not null]
  "camera_id" integer [not null, note: '0 | 1']
  "exposure" integer [not null, default: 100]
  "gain" real [not null, default: 1]
  "white_balance" integer [not null, default: 0, note: '0=auto | 1=manual']
  "focus" integer [not null, default: 0, note: '0=auto | 1=manual']
  "width" integer [not null, default: 1920]
  "height" integer [not null, default: 1080]
  "format" integer [not null, default: 0, note: '0=YUV422']
  "fps" integer [not null, default: 60]
  "intrinsic_matrix" blob [not null, note: 'JSON array, 3x3 flat']
  "distortion_coefficients" blob [not null, note: 'JSON array, 5 values']
  "calibrated_at" text [not null, default: `datetime(now)`]

  Indexes {
    (camera_id, calibrated_at) [name: "idx_camera_calibration_camera_id_calibrated_at"]
  }

  checks {
    `camera_id >= 0 AND camera_id <= 1`
    `exposure > 0`
    `gain > 0`
    `fps > 0`
    `width > 0`
    `height > 0`
  }
}

Table "microphone_calibration" {
  "id" integer [pk, not null]
  "mic_id" integer [not null, note: '0 | 1']
  "noise_reduction" boolean [not null, default: true]
  "sensitivity" real [not null, default: 1]
  "calibrated_at" text [not null, default: `datetime(now)`]

  Indexes {
    (mic_id, calibrated_at) [name: "idx_microphone_calibration_mic_id_calibrated_at"]
  }

  checks {
    `mic_id >= 0 AND mic_id <= 1`
    `sensitivity > 0`
  }
}
